fixed small issue with timeoverlay being at wrong position

--- a/beuth/resources/style/controls.less
+++ b/beuth/resources/style/controls.less
@@ -344,6 +344,8 @@ div {
 
 // TIMEOVERLAY STYLE
 .divTimeOverlay{
+	left: 0 !important;
+	top: 100% !important;
 	position: absolute;
 	background-color: @backgroundColor;
 	color: white;
